added capabilities